--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,41 +1,44 @@
 
 
 <div #scrollContainer class="root-container">
-<div class="container">
-    
-  <div #anchor class="anchor subcontainer" id="home">
-    
-    <div class="generic-flex-grow-container">
-        Welcome to Practice Night!
-      <p>
-        Practice Night helps you practice multiple (spliced) change ringing methods, including 
-        bobs and singles if desired.
-      </p>
-        A word of warning though, this is not for the purists. Practice Night make no attempt
-        to generate a 'true' set of changes.  The touches are randomly generated to help
-        remember the shape of changes over a leadend.  
+  <div class="container">
+      
+    <div #anchor class="anchor subcontainer" id="home">
+      
+      <div class="generic-flex-grow-container">
+          Welcome to Practice Night!
+        <p>
+          Practice Night helps you practice multiple (spliced) change ringing methods, including 
+          bobs and singles if desired.
+        </p>
+          A word of warning though, this is not for the purists. Practice Night make no attempt
+          to generate a 'true' set of changes.  The touches are randomly generated to help
+          remember the shape of changes over a leadend.  
+      </div>
+      <div class="nav-btn-container"> 
+        <button class="nav-btns" (click)="nav.scrollTo('methods')">Start</button>  
+      </div>
+
     </div>
-    <div class="nav-btn-container"> 
-      <button class="nav-btns" (click)="nav.scrollTo('methods')">Start</button>  
+
+    <div #anchor class="anchor" id="methods">
+      @if (showMethodsComponent) {
+        <app-methods (methodsArrayUpdated)="onMethodsChange($event)"></app-methods>
+      }
+    </div>
+
+
+    <div #anchor class="anchor" id="options">
+      <app-options [numberOfBells]="numberOfBells" [suppressBobsOption]="suppressBobsOption" (options)="onOptionsChange($event)"></app-options>
+    </div>
+
+    <div #anchor #practice class="anchor" id="practice">
+      @if (showPracticeComponent) {
+        <app-practice [methods]="methods" [options]="options"></app-practice>
+      }
     </div>
 
   </div>
-
-  <div #anchor class="anchor" id="methods">
-    <app-methods (methodsArrayUpdated)="onMethodsChange($event)"></app-methods>
-  </div>
-
-  <div #anchor class="anchor" id="options">
-    <app-options [numberOfBells]="numberOfBells" (options)="onOptionsChange($event)"></app-options>
-  </div>
-
-  <div #anchor #practice class="anchor" id="practice">
-    @if (showPracticeComponent) {
-      <app-practice [methods]="methods" [options]="options"></app-practice>
-    }
-  </div>
-
-</div>
 </div>
 
 
