--- a/src/app/home/methods/methods.component.html
+++ b/src/app/home/methods/methods.component.html
@@ -5,7 +5,7 @@
 
     <form class="methods-form">    
       <label for="inputSearch">Select method(s) to add:</label><br>
-      <input [(ngModel)]="searchString" autocomplete="off" (input)="applyFilter()" (focus)="onFocus()" (blur)="onBlur()" 
+      <input #autofocus [(ngModel)]="searchString" autocomplete="off" (input)="applyFilter()" (focus)="onFocus()" (blur)="onBlur()" 
         name="inputSearch" id="inputSearch" placeholder="Type to filter ...">
     </form>
 
