change front page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,12 +8,7 @@
       <div class="generic-flex-grow-container">
           Welcome to Practice Night!
         <p>
-          Practice Night helps you practice multiple (spliced) change ringing methods, including 
-          bobs and singles if desired.
-        </p>
-          A word of warning though, this is not for the purists. Practice Night make no attempt
-          to generate a 'true' set of changes.  The touches are randomly generated to help
-          remember the shape of changes over a leadend.  
+          Practice Night helps you practice touches and combinations of your favourite change ringing methods.
       </div>
       <div class="nav-btn-container"> 
         <button class="nav-btns" (click)="nav.scrollTo('methods')">Start</button>  
