--- a/src/app/home/options/options.component.css
+++ b/src/app/home/options/options.component.css
@@ -1,27 +1,21 @@
 
-.grid {
+.two-columns {
   display: grid;
   grid-auto-rows: min-content;
   grid-template-columns: max-content 1fr;
 }
 
-/* Styling for the cells */
-.grid-cell {
-  padding: 5px;
-  display: flex;
-  align-items: center;
+.grid-label {
+  grid-column: 1;
 }
 
-/* Ensuring the Select element takes full column width */
-.grid-cell select {
-  width: 100%;
+.grid-option {
+  grid-column: 2;
 }
 
-.grid-cell input {
-  display: flex;
-  /* margin-right: auto; */
-}
-
-.grid-margin {
+.grid-header {
+  font-size: larger;
   margin-top: 1rem;
+  margin-bottom: 0.5rem;
+  grid-column: 1 / 2;
 }
