--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,6 +4,7 @@
 
 /* Defines the height and width of the viewport */
 .root-container {
+  position: relative;
   width: 100vw;
   height: 100dvh;
   overflow-x: hidden;  
