--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -10,6 +10,7 @@
   overflow-x: hidden;  
   scrollbar-width: none;          /* For Firefox */
   -ms-overflow-style: none;       /* For Internet Explorer and legacy Edge */
+  border: 1px red solid;
 }
 
 /* These styles remove the scroll bar */
@@ -24,6 +25,7 @@
   display: grid;  
   grid-template-columns: repeat(4, 100vw);
   height: 100%;
+  border: 1px green solid;
 }
 
 .grid-column {
@@ -34,7 +36,7 @@
 }
 
 .page-container {
-  height: 100vh;
+  height: 100%;
   width: var(--container-width);
   display: flex;  
   margin: 0rem;
@@ -42,6 +44,7 @@
   padding: 1rem;
   flex-direction: column;
   position: relative;
+  border: 1px blue solid;
 }
 
 /* For desktop size screens, use background as a visual clue to mobile optimised nature */
