--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,9 +9,7 @@
       <div class="page-container">
         
         <div class="generic-flex-grow-container centre-vertically">
-            Welcome to Practice Night!
-          <p>
-            Practice Night helps you practice touches and combinations of your favourite change ringing methods.
+            <img src="assets/pnlogo.png" alt="Practice Night: A Bell Ringing Simulator logo">
         </div>
         <div class="nav-btn-container"> 
           <button class="nav-btns" (click)="nav.scrollTo('methods')">Start</button>  
