--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,4 @@
-:root {
-  --container-width: 350px;
-}
+
 
 /* Defines the height and width of the viewport */
 .root-container {
@@ -9,6 +7,7 @@
   overflow-x: hidden;  
   scrollbar-width: none;          /* For Firefox */
   -ms-overflow-style: none;       /* For Internet Explorer and legacy Edge */
+  /* position: relative; */
 }
 
 /* These styles remove the scroll bar */
@@ -22,26 +21,34 @@
 .grid-container {
   display: grid;  
   grid-template-columns: repeat(4, 100vw);
-  height: 100%;
+  height: 100dvh;
+  /* border: red solid 2px; */
+  /* position: relative */
+  /* overflow: hidden; */
 }
 
+
 .grid-column {
-  height: 100%;
+  height: 100dvh;
   width: 100%;
   display: flex;
   justify-content: center;
+  /* border: blue solid 1px; */
 }
 
 .page-container {
-  height: 100%;
+  height: 100dvh;
   width: var(--container-width);
   display: flex;  
   margin: 0rem;
   box-sizing: border-box;
-  padding: 1rem;
+  padding: 1rem 1rem 2rem 1rem;
   flex-direction: column;
   position: relative;
+  overflow: hidden;
+  /* border: green 1px solid; */
 }
+
 
 /* For desktop size screens, use background as a visual clue to mobile optimised nature */
 @media (min-width: 768px) {
@@ -65,6 +72,7 @@
   flex-grow: 1;
   position: relative;
   width: 100%;
+  overflow: hidden;
 }
 
 .nav-btn-container {
@@ -74,12 +82,23 @@
 }
 
 .nav-btns {
-  border-radius: 5px;
+  /* border-radius: 5px;
+  border: 0px solid white; */
   width: 45%;
+  height: 2rem;
   margin-inline: auto;
   margin-top: 0.5rem;
-  background-color: darkorange;
+  background-color: #000080;
+  color:white;
+  font-family:'Courier New', Courier, monospace
 }
 
+.nav-btns:disabled {
+  color: slategray
+}
+
+.nav-btns:hover{
+  cursor: pointer;
+}
 
 
