--- a/src/app/home/methods/methods.component.css
+++ b/src/app/home/methods/methods.component.css
@@ -1,50 +1,63 @@
-
-.methods-form {
-  margin-top: 1rem;
+form {
+  display: block;
 }
 
 input {
-  width: 100%;
+  width: 90%;
 }
 
 .list-container {
   position: relative;
   width: 100%;
+  height: 100%;
   flex-grow: 1;
-  overflow: scroll;
-  white-space: nowrap;
-}
-
-.list {
-  /* height: 100%; */
-  padding: 0;
-  margin: 0;
-  min-height: 0; 
-  max-height: 100%;
-  background-color: white;
+  /* overflow: scroll;
+  white-space: nowrap; */
 }
 
 .popover {
   position: absolute;
   width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   background-color: gainsboro;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   border: 1px grey solid;
+  overflow: scroll;
+  /* height:300px; */
 }
 
-.list > li {
+.fixed {
+  overflow: scroll;
+}
+
+ul {
+  background-color: white;
+  padding: 0px;
+  margin: 0px;
+  min-width: 100%;
+  width: fit-content;
+}
+
+li {
+  min-width: 100%;
+  width: fit-content;
   list-style-type: none;
   line-height: 1.5rem;
   background-color: whitesmoke;
+  white-space: nowrap;
+  /* display: inline-block; */
 }
 
-/* .list > li:hover {
+li:hover {
   cursor: pointer;
-} */
+}
 
-.list > li:nth-child(even) {
+li:nth-child(even) {
   background-color: gainsboro;
 }
+
+
+
