--- a/src/app/home/practice/practice.component.css
+++ b/src/app/home/practice/practice.component.css
@@ -14,7 +14,7 @@
 
 .statsbox {
   width: 30%;
-  border-radius: 10px;
+  /* border-radius: 10px; */
 }
 
 .title {
@@ -69,13 +69,14 @@
 
 .arrow-btns {
   width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  margin-top: 0.5rem;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  column-gap: 0.2rem;
 }
 
 .arrow-btns > button {
-  width: 100px;
+  width: 100%;
   height: 150px;
+  margin: 0;
+  padding: 0;
 }
