--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,15 @@
+:root {
+  --container-width: 350px;
+  --colour-red:  #800000;
+  --colour-blue: #000080;
+  --colour-grey: #B3B3B3;
+  --font-size-normal: 20px;
+  --font-size-large: 28px;
+}
+
 
 html {
-  font-size: 26px;
+  font-size: var(--font-size-normal);
   font-weight: 300;
   font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   scroll-behavior: smooth;
@@ -19,10 +28,60 @@ input, button, select {
 }
 
 input[type=checkbox] {
-    transform: scale(2);
+  transform: scale(2);
+  accent-color: var(--colour-blue);
 }
 
 option {
   font-size: 16px;
-
 }
+
+h1 {
+  font-size: var(--font-size-large);
+  font-weight: 400;
+  padding-top: 2rem;
+  padding-bottom: 0.3rem;
+  margin: 0;
+}
+
+h2 {
+  font-size: var(--font-size-large);
+  font-weight: 300;
+  padding-top: 1rem;
+  padding-bottom: 0.3rem;
+  margin: 0;
+}
+
+
+
+.help-button {
+  position: absolute;
+  z-index: 400;
+  top: 2rem;
+  right: 2rem;
+  border-radius: 50%;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 900;
+  height: 1.2rem;
+  width: 1.2rem;
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+}
+
+.help-button.close {
+  border-width: 3px;
+  border-color: white;
+  color: white;
+}
+
+.help-button.open {
+  border-width: 3px;
+  border-color: var(--colour-blue);
+  color: var(--colour-blue);
+}
+
+.help-button:hover {
+  cursor: pointer;
+}
+
